# vit_object_detection

./: .gitignore  README.md  dataset.py  model.py  pyproject.toml
