[tool.poetry]
name = "vit-object-detection-test"
version = "0.1.0"
description = "Object Detection using ViT"
authors = [
    "charitarthchugh <37895518+charitarthchugh@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "vit_object_detection_test" }]

[tool.poetry.dependencies]
python = "~3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"
wandb = "^0.13.7"
lxml = "^4.9.2"
tqdm = "^4.64.1"
einops = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"
notebook = "^6.5.2"
jupyter = "^1.0.0"
[tool.poetry.group.tf.dependencies]
tensorflow = "^2.11.0"
tensorflow-addons = "^0.19.0"
tensorrt = "^8.5.2.2"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
opencv-python = "^4.6.0.66"
pandas = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
